add a DB and reconfigure Item GetAll()

--- a/ToDoList/wwwroot/css/styles.css
+++ b/ToDoList/wwwroot/css/styles.css
@@ -1,6 +1,9 @@
 body {
   margin: 0 auto;
   max-width: 1200px;
+  background-color: beige;
+  font-size: 30px;
+  
 }
 div#footer {
   position:fixed;
