add CatergoryController and HTML

--- a/ToDoList/Views/Items/Edit.cshtml
+++ b/ToDoList/Views/Items/Edit.cshtml
@@ -1,3 +1,4 @@
+  
 @{
   Layout = "_Layout";
 }
@@ -15,6 +16,10 @@
     @Html.LabelFor(model => model.Description)
     @Html.EditorFor(model => model.Description)
 
+    @Html.LabelFor(model => model.Category)
+    @Html.DropDownList("CategoryId")
+
     <input type="submit" value="Save" />
 }
+
 <p>@Html.ActionLink("Back to list", "Index")</p>
